--- a/.github/workflows/test_export_tflite_cli_quantization_int8_custom_dataset.yml
+++ b/.github/workflows/test_export_tflite_cli_quantization_int8_custom_dataset.yml
@@ -5,6 +5,11 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+    paths:
+      - "optimum/exporters/tasks.py"
+      - "optimum/exporters/tflite/**.py"
+      - "tests/exporters/**.py"
+      - "setup.py"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
