--- a/examples/onnxruntime/training/docker/Dockerfile-ort1.13.1-cu116
+++ b/examples/onnxruntime/training/docker/Dockerfile-ort1.13.1-cu116
@@ -49,7 +49,7 @@ RUN pip install pygit2 pgzip
 # (Optional) Intall test dependencies
 RUN pip install git+https://github.com/huggingface/transformers
 RUN pip install datasets accelerate evaluate coloredlogs absl-py rouge_score seqeval scipy sacrebleu nltk scikit-learn parameterized sentencepiece
-RUN pip install fairscale deepspeed mpi4py
+RUN pip install deepspeed mpi4py
 # RUN pip install optuna ray sigopt wandb
 
 # Install onnxruntime-training dependencies
