--- a/.github/workflows/test_onnxruntime_train.yml
+++ b/.github/workflows/test_onnxruntime_train.yml
@@ -1,6 +1,10 @@
 name: ONNX Runtime Training / Test ORTTrainer
 
 on:
+  workflow_call:
+    secrets:
+      AWS_ACCESS_KEY_ID: { required: true, type: string }
+      AWS_SECRET_ACCESS_KEY: { required: true, type: string }
   workflow_dispatch:
   schedule:
     - cron: 0 1 */3 * * # at 1am every 3 days
@@ -14,8 +18,6 @@ jobs:
     runs-on: ubuntu-latest
     env:
       AWS_REGION: us-east-1
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       EC2_AMI_ID: ami-0dc1c26161f869ed1
       EC2_INSTANCE_TYPE: g4dn.xlarge
       EC2_SUBNET_ID: subnet-859322b4,subnet-b7533b96,subnet-47cfad21,subnet-a396b2ad,subnet-06576a4b,subnet-df0f6180
