--- a/.github/workflows/test_onnxruntime_train.yml
+++ b/.github/workflows/test_onnxruntime_train.yml
@@ -1,17 +1,18 @@
 name: ONNX Runtime Training / Test ORTTrainer
 
-on:
+on:    
+  workflow_dispatch:
+    secrets:
+      AWS_ACCESS_KEY_ID: { required: true, type: string }
+      AWS_SECRET_ACCESS_KEY: { required: true, type: string }
   schedule:
     - cron: 0 1 */3 * * # at 1am every 3 days
   pull_request:
     types: [opened, synchronize, reopened, labeled]
 
-concurrency:
-  group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
-  cancel-in-progress: true
-
 jobs:
   start-runner:
+    if: ${{ (github.event_name == 'workflow_dispatch') || (github.event_name == 'schedule') ||  contains( github.event.pull_request.labels.*.name, 'training')}}
     name: Start self-hosted EC2 runner
     runs-on: ubuntu-latest
     env:
