--- a/.github/workflows/test_onnxruntime_train.yml
+++ b/.github/workflows/test_onnxruntime_train.yml
@@ -1,24 +1,27 @@
-name: ONNX Runtime Training / Test ORTTrainer
+name: Optimum neuron / Test INF2
 
-on:    
-  workflow_dispatch:
-    secrets:
-      AWS_ACCESS_KEY_ID: { required: true, type: string }
-      AWS_SECRET_ACCESS_KEY: { required: true, type: string }
-  schedule:
-    - cron: 0 1 */3 * * # at 1am every 3 days
+on:
+  push:
+    branches: [ main ]
+    paths:
+      - "optimum/**.py"
   pull_request:
-    types: [opened, synchronize, reopened, labeled]
+    branches: [ main ]
+    paths:
+      - "optimum/**.py"
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
+  cancel-in-progress: true
 
 jobs:
   start-runner:
-    if: ${{ (github.event_name == 'workflow_dispatch') || (github.event_name == 'schedule') ||  contains( github.event.pull_request.labels.*.name, 'training')}}
     name: Start self-hosted EC2 runner
     runs-on: ubuntu-latest
     env:
       AWS_REGION: us-east-1
-      EC2_AMI_ID: ami-0dc1c26161f869ed1
-      EC2_INSTANCE_TYPE: g4dn.xlarge
+      EC2_AMI_ID: ami-03f5b2e86a2a937e7
+      EC2_INSTANCE_TYPE: inf2.8xlarge
       EC2_SUBNET_ID: subnet-859322b4,subnet-b7533b96,subnet-47cfad21,subnet-a396b2ad,subnet-06576a4b,subnet-df0f6180
       EC2_SECURITY_GROUP: sg-0bb210cd3ec725a13
       EC2_IAM_ROLE: optimum-ec2-github-actions-role
@@ -72,7 +75,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       AWS_REGION: us-east-1
-    if: ${{ always() && !(needs.start-runner.result == 'skipped' && needs.do-the-job.result == 'skipped') }} # required to stop the runner even if the error happened in the previous jobs
+    if: ${{ always() }} # required to stop the runner even if the error happened in the previous jobs
     steps:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
