--- a/.github/workflows/test_onnxruntime_train.yml
+++ b/.github/workflows/test_onnxruntime_train.yml
@@ -1,14 +1,10 @@
-name: Optimum neuron / Test INF2
+name: ONNX Runtime / Test ORTTrainer
 
 on:
   push:
     branches: [ main ]
-    paths:
-      - "optimum/**.py"
   pull_request:
     branches: [ main ]
-    paths:
-      - "optimum/**.py"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
@@ -20,8 +16,8 @@ jobs:
     runs-on: ubuntu-latest
     env:
       AWS_REGION: us-east-1
-      EC2_AMI_ID: ami-03f5b2e86a2a937e7
-      EC2_INSTANCE_TYPE: inf2.8xlarge
+      EC2_AMI_ID: ami-0dc1c26161f869ed1
+      EC2_INSTANCE_TYPE: g4dn.xlarge
       EC2_SUBNET_ID: subnet-859322b4,subnet-b7533b96,subnet-47cfad21,subnet-a396b2ad,subnet-06576a4b,subnet-df0f6180
       EC2_SECURITY_GROUP: sg-0bb210cd3ec725a13
       EC2_IAM_ROLE: optimum-ec2-github-actions-role
