--- a/.github/workflows/test_onnxruntime_train.yml
+++ b/.github/workflows/test_onnxruntime_train.yml
@@ -1,17 +1,15 @@
 name: ONNX Runtime / Test ORTTrainer
 
 on:
-  push:
-    branches: [ main ]
+  workflow_dispatch:
+  schedule:
+    - cron: 0 1 */3 * * # at 1am every 3 days
   pull_request:
-    branches: [ main ]
-
-concurrency:
-  group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
-  cancel-in-progress: true
+    types: [opened, synchronize, reopened, labeled]
 
 jobs:
   start-runner:
+    if: ${{ (github.event_name == 'workflow_dispatch') || (github.event_name == 'schedule') ||  contains( github.event.pull_request.labels.*.name, 'training')}}
     name: Start self-hosted EC2 runner
     runs-on: ubuntu-latest
     env:
