--- a/.github/workflows/test_onnxruntime_gpu.yml
+++ b/.github/workflows/test_onnxruntime_gpu.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: ${{ secrets.OPTIMUM_OIDC_IAM_ROLE }}
+          role-to-assume: arn:aws:iam::754289655784:role/optimum-oidc-github-actions-role
           aws-region: ${{ env.AWS_REGION }}
       - name: Start EC2 runner
         id: start-ec2-runner
@@ -83,7 +83,7 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: ${{ secrets.OPTIMUM_OIDC_IAM_ROLE }}
+          role-to-assume: arn:aws:iam::754289655784:role/optimum-oidc-github-actions-role
           aws-region: ${{ env.AWS_REGION }}
       - name: Stop EC2 runner
         uses: philschmid/philschmid-ec2-github-runner@main
