--- a/.github/workflows/build_pr_documentation.yml
+++ b/.github/workflows/build_pr_documentation.yml
@@ -5,7 +5,6 @@ name: Build PR documentation
 on:
   workflow_dispatch:
   pull_request_target:
-    branches: [ main ]
     types: [ opened, synchronize, reopened, labeled ]
     paths:
       - "optimum/**.py"
@@ -18,7 +17,7 @@ concurrency:
 
 jobs:
   authorize:
-    if: (github.event.action == 'labeled' && github.event.label.name == 'build-pr-doc') || github.event_name != 'pull_request_target' || (! github.event.pull_request_target.head.repo.fork)
+    if: (github.event.action == 'labeled' && github.event.label.name == 'build-pr-doc') || github.event_name != 'pull_request_target' || (! github.event.pull_request.head.repo.fork)
     runs-on: ubuntu-latest
     steps:
       - run: true
@@ -27,10 +26,10 @@ jobs:
     needs: authorize
     runs-on: ubuntu-latest
     env:
-      COMMIT_SHA: ${{ github.event.pull_request_target.head.sha }}
+      COMMIT_SHA: ${{ github.event.pull_request.head.sha }}
       PR_NUMBER: ${{ github.event.number }}
       EVENT_CONTEXT: ${{ toJSON(github.event) }}
-      PR_CLONE_URL: ${{ github.event.pull_request_target.head.repo.clone_url }}
+      PR_CLONE_URL: ${{ github.event.pull_request.head.repo.clone_url }}
 
     steps:
       - uses: actions/checkout@v2
@@ -42,7 +41,7 @@ jobs:
         with:
           repository: 'huggingface/optimum'
           path: optimum
-          ref: ${{ github.event.pull_request_target.merge_commit_sha }}
+          ref: ${{ github.event.pull_request.merge_commit_sha }}
 
       - uses: actions/checkout@v2
         with:
