--- a/.github/workflows/build_main_documentation.yml
+++ b/.github/workflows/build_main_documentation.yml
@@ -36,11 +36,6 @@ jobs:
 
       - uses: actions/checkout@v2
         with:
-          repository: 'huggingface/optimum-graphcore'
-          path: optimum-graphcore
-
-      - uses: actions/checkout@v2
-        with:
           repository: 'huggingface/optimum-intel'
           path: optimum-intel
 
@@ -118,13 +113,6 @@ jobs:
           pip install black
           cd ..
 
-      - name: Make Graphcore documentation
-        run: |
-          cd optimum-graphcore
-          make doc BUILD_DIR=graphcore-doc-build VERSION=${{ env.VERSION }}
-          sudo mv graphcore-doc-build ../optimum
-          cd ..
-
       - name: Make Habana documentation
         run: |
           sudo docker system prune -a -f
@@ -183,7 +171,7 @@ jobs:
       - name: Combine subpackage documentation
         run: |
           cd optimum
-          sudo python docs/combine_docs.py --subpackages graphcore habana intel neuron furiosa amd --version ${{ env.VERSION }}
+          sudo python docs/combine_docs.py --subpackages habana intel neuron furiosa amd --version ${{ env.VERSION }}
           cd ..
 
       - name: Push to repositories
