--- a/docs/source/_redirects.yml
+++ b/docs/source/_redirects.yml
@@ -28,3 +28,6 @@ intel_trainer: intel/reference_inc
 
 # Optimum Neuron
 docs/optimum-neuron/index: /docs/optimum-neuron/index
+
+# Optimum TPU
+docs/optimum-tpu/index: /docs/optimum-tpu/index
