--- a/.github/workflows/test_utils.yml
+++ b/.github/workflows/test_utils.yml
@@ -1,5 +1,3 @@
-# This workflow will install Python dependencies, run tests and lint with a variety of Python versions
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 name: Utils / Python - Test
 
 on:
@@ -17,11 +15,17 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [3.8, 3.9]
         os: [ubuntu-20.04, macos-13]
+        python-version: [3.8, 3.9]
 
     runs-on: ${{ matrix.os }}
     steps:
+      - name: Free Disk Space (Ubuntu)
+        uses: jlumbroso/free-disk-space@main
+        if: matrix.os == 'ubuntu-20.04'
+        with:
+          tool-cache: true
+
       - name: Checkout code
         uses: actions/checkout@v3
 
