--- a/.github/workflows/test_cli.yml
+++ b/.github/workflows/test_cli.yml
@@ -40,4 +40,4 @@ jobs:
         env:
           HF_HOME: /mnt/cache/.cache/huggingface
         run: |
-          pytest cli -n auto -s -vvvv --durations=0
+          pytest cli -s -vvvv --durations=0
