--- a/.github/workflows/test_gptq.yml
+++ b/.github/workflows/test_gptq.yml
@@ -41,5 +41,6 @@ jobs:
             --volume ${{ github.workspace }}:/workspace
             --workdir /workspace
           run: |
-            pip install -e .[tests,gptq]
+            pip install auto-gptq
+            pip install -e .[tests]
             pytest tests/gptq -s -vvvv --durations=0
